[package]
name = "tick-merkle"
description = "State commitments: chunked sha256 merkle tree over game state"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# sha256 syscall on-chain, software sha256 off-chain, same call either way.
# The sha2 feature is the off-chain fallback; the syscall wins on target solana.
solana-sha256-hasher = { version = "3.1", features = ["sha2"] }
