[package]
name = "tickpruv-runtime"
description = "Off-chain engine: runs tick programs through the real agave program runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# 0.12.x tracks agave 3.1, matching the deployed cluster runtime.
# 0.13+ moved to agave 4 - don't bump until the cluster does.
mollusk-svm = "=0.12.0"
solana-account = "3.2"
solana-instruction = "3.1"
solana-pubkey = "4.0"
tick-merkle = { path = "../merkle" }

[dev-dependencies]
arena = { path = "../../games/arena" }
referee = { path = "../../programs/referee" }
tick-core = { path = "../tick-core" }
wager = { path = "../../programs/wager" }
