[package]
name = "root-bench"
description = "Measures on-chain state root cost as a function of state size"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "3.0.0"
tick-merkle = { path = "../../crates/merkle" }
