[package]
name = "wager"
description = "Trustless stake escrow for two-player tick games, settled by referee checkpoints"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
# for crates that read Match as a library and link their own entrypoint
no-entrypoint = []

[dependencies]
solana-program = "3.0.0"
tick-merkle = { path = "../../crates/merkle" }
referee = { path = "../referee", features = ["no-entrypoint"] }
